[package]
name = "bhi160"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
log = ["dep:log"]

[dependencies]
modular-bitfield = "0.11"
byteorder = "1.4"
#itertools = "0.10"
embedded-hal = "1.0.0-alpha.8"

log = { version = "0.4", optional = true }